syntax = "proto3";

package registrationpb;

service Registration {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserReply) {}
}

message RegisterUserRequest {
    string externalId = 1;
    string username = 2;
}

message RegisterUserReply {
    User user = 1;
}

message User {
    string id = 1;
    string externalId = 2;
    string username = 3;
    bool canVote = 4;
}
