syntax = "proto3";

package sessionpb;

service Session {
    rpc CurrentPoll(CurrentPollRequest) returns (CurrentPollReply) {}
    rpc SetCurrentPoll(SetCurrentPollRequest) returns (SetCurrentPollReply) {}
    rpc Options(OptionsRequest) returns (OptionsReply) {}
    rpc Ballot(BallotRequest) returns (BallotReply) {}
}

message CurrentPollRequest {
    string serverId = 1;
}

message CurrentPollReply {
    string serverId = 1;
    string pollId = 2;
}

message SetCurrentPollRequest {
    string serverId = 1;
    string pollId = 2;
}

message SetCurrentPollReply {
    string serverId = 1;
    string pollId = 2;
}

message OptionsRequest {
    string serverId = 1;
    string userId = 2;
    string pollId = 3;
}

message OptionsReply {
    repeated Option options = 1;
}

message Option {
    string id = 1;
    string userSessionId = 2;
    string pollId = 3;
    string userId = 4;
    string optionId = 5;
    string content = 6;
}

message BallotRequest {
    string serverId = 1;
    string userId = 2;
    string pollId = 3;
    repeated int32 ids = 4;
}

message BallotReply {
    string pollId = 1;
    repeated BallotOption options = 2;
}

message BallotOption {
    int32 id = 1;
    string content = 2;
}
